--- a/src/main/java/de/tobiasdollhofer/codecast/player/ui/PlayerUI.form
+++ b/src/main/java/de/tobiasdollhofer/codecast/player/ui/PlayerUI.form
@@ -18,7 +18,7 @@
         <properties>
           <visible value="true"/>
         </properties>
-        <border type="none"/>
+        <border type="empty"/>
         <children/>
       </scrollpane>
       <grid id="f0665" binding="playerPanel" layout-manager="GridLayoutManager" row-count="4" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
@@ -40,7 +40,7 @@
             <properties>
               <editable value="false"/>
               <font name="Segoe UI" size="18" style="0"/>
-              <text resource-bundle="ui_text" key="no_comment_available"/>
+              <text resource-bundle="ui_text" key="comments_loading"/>
               <toolTipText resource-bundle="ui_text" key="tooltip_currentComment"/>
             </properties>
           </component>
@@ -193,7 +193,7 @@
       </grid>
       <toolbar id="97b4e" binding="toolbar">
         <constraints>
-          <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="4" fill="0" indent="0" use-parent-layout="false"/>
+          <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
           <borderPainted value="true"/>
@@ -225,6 +225,7 @@
               <maximumSize width="40" height="40"/>
               <minimumSize width="40" height="40"/>
               <preferredSize width="40" height="40"/>
+              <selected value="true"/>
               <text value=""/>
               <toolTipText resource-bundle="ui_text" key="tooltip_autoplayButton"/>
             </properties>
@@ -235,6 +236,7 @@
               <maximumSize width="40" height="40"/>
               <minimumSize width="40" height="40"/>
               <preferredSize width="40" height="40"/>
+              <selected value="true"/>
               <text value=""/>
               <toolTipText resource-bundle="ui_text" key="tooltip_jumpToCodeButton"/>
             </properties>
